--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,23 +455,22 @@ button a {
     margin: 30px auto;
 }
 /* FOOTER */
-/* footer {
-    background-color: #000;
-} */
+footer {
+    background-color: #222222;
+}
 .footer {
     max-width: 1170px;
-    margin: 0 auto;
+    margin: 5px auto;
 }
 .footer .footer-top {
     text-align: center;
-    margin: 100px auto;
-}
-.footer-logo {
-    padding-top: 5px;
+    padding: 100px 0 30px 0;
+    border-bottom: 1px solid #777;
 }
 .footer-title {
     font-size: 14px;
     margin-top: 30px;
+    color: #777;
 }
 .footer-icons {
     margin-top: 20px;
@@ -488,24 +487,68 @@ button a {
 .footer-icons ul li a {
     color: #777;
 }
+.footer-icons ul li a:hover {
+    color: #fff;
+    transition: all 0.3s ease;
+}
+.footer_list {
+    padding-top: 17px;
+}
 .footer_list ul li {
     list-style: none;
 }
 .footer_list .footer-item a {
     text-decoration: none;
 }
+.footer_list .footer-item i {
+    padding-right: 12px;
+}
 .grid_row {
     display: flex;
 }
 .grid_colum {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 20%;
+    padding: 73px 0 43px 0;
+    min-width: 300px;
+}
+.grid_colum::first-child {
+    margin-right: 0;
+    padding-right: 0;
+}
+.grid_colum::last-child {
+    margin-right: 0;
+    padding-right: 0;
 }
 .grid_colum h4 {
     text-transform: uppercase;
+    color: #fff;
+    font-size: 18px;
 }
-
+.grid_colum .footer_list a {
+    color: #777;
+    font-size: 14px;
+}
+.grid_colum .footer_list a:hover {
+    color: #fff;
+    transition: all 0.3s ease;
+}
+.footer-item {
+    color: #fff;
+    padding: 8px 0;
+}
+.content-other {
+    height: 50px;
+    background-color: #111111;
+    text-align: center;
+}
+.content-other p {
+    color: #777;
+    padding: 14px 0;
+    font-size: 15px;
+}
+.content-other p:hover {
+    color: #fff;
+    transition: all 0.3s ease;
+}
 
 
 /* REPONSIVE */
@@ -582,11 +625,13 @@ button a {
     .cart {
         width: 35%;
         margin: auto;
-        left: -34px;
     }
     .brands .container ul {
         display: block;
         width: calc(18% - 30px);
         margin: auto;
+    }
+    .grid_row {
+        display: block;
     }
 }
